--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <div class="header">
       <h1>Wild GIS Chase</h1>
     </div>
-
     <div class="body">
-      <br><p>Welcome to our project page! From here you can access our mapping + data storytelling projects:</p>
+      <p>Wild GIS Chase started out of a shared desire to explore how we can utilize online resources to help communicate themes and tell stories with maps, data visualizations, and interactivity. We first collaborated on a virtual tour of New York's Jamaica Wildlife Refuge, a haven for migratory and local birds, in <em>Jane's Squawk!</em> and have since continued to experiment with different media.</p>
+      <p>This page lists our mapping and data storytelling projects to date.</p>
       <h2><small>Jane's Squawk! A (Virtual) Bird Walk Through Queens</small></h2><br>
-      <a href="https://wildgischase.github.io/janes-squawk/" target="_blank"><img src="./assets/images/janes-squawk.png" alt="A screenshot from the Jane's Squawk project" height="auto" width="100%"></a>
+      <a href="https://wildgischase.github.io/janes-squawk/" target="_blank"><img src="./assets/images/janes-squawk.jpg" alt="A person with binoculars stands overlooking the water." height="auto" width="100%"></a>
       <p><small>Created for <a href="https://janeswalk.org/" target="_blank">Jane's Walk</a> 2023, this virtual walk explores crowdsourced data about the birds of Queens, NY, from long-legged shorebirds to colorful warblers to elegant swallows. We then put our novice birding skills to the test and see what we can find when we venture out ourselves. <a href="https://wildgischase.github.io/janes-squawk/" target="_blank">Follow along here</a>.</small></p>
       <h2><small>Jane's Block: The “Sidewalk Ballet” along Astoria’s Steinway Street</small></h2><br>
-      <a href="https://wildgischase.github.io/janes-block-steinway/" target="_blank"><img src="./assets/images/janes-block-steinway.png" alt="A screenshot from the Jane's Squawk project" height="auto" width="100%"></a>
-      <p><small>We returned in 2024 with our second virtual Jane's Walk, this time to Steinway Street in Astoria, Queens, a former company town that supported the eponymous Steinway & Sons piano manufacturer in the late nineteenth century. Today, the street is quintessentially New York—warehouses give way to brick rowhouses interspersed with an incredible array of storefronts and people. In the spirit of Jane Jacobs’ contemplation of urban streets, this multimedia tour is an immersive experience of Steinway Street’s Middle Eastern and North African enclaves. <a href="https://wildgischase.github.io/janes-block-steinway/" target="_blank">Join us here</a>.</small></p>
+      <a href="https://wildgischase.github.io/janes-block-steinway/" target="_blank"><img src="./assets/images/janes-block-al-sham-sweets.jpg" alt="Two storefronts with people seated out front." height="auto" width="100%"></a>
+      <p><small>We returned in 2024 with our second virtual Jane's Walk, this time to Steinway Street in Astoria, Queens, a former company town that supported the eponymous Steinway & Sons piano manufacturer in the late nineteenth century. Today, the street is quintessentially New York—warehouses give way to brick rowhouses interspersed with an incredible array of storefronts and people. In the spirit of Jane Jacobs’ contemplation of urban streets, this multimedia tour is an immersive experience of Steinway Street’s Middle Eastern and North African enclaves. <a href="https://wildgischase.github.io/janes-block-steinway/" target="_blank">Join us</a>.</small></p>
     </div>
     <div class="footer">
       <div class="row">
         <div class="column left">
           <p>This site is a collaboration by Stephen Albonesi and Rawnak Zaman. We are researchers based in New York City with an interest in exploring urban life through data visualizations and storytelling.</p>
-          <p><em><small><a href="https://github.com/orgs/wildGISchase/repositories" target="_blank">Wild GIS Chase on GitHub</a> / Image in footer by tonmoydebnath via pngtree</small></em></p>
+          <p><small>Wild GIS Chase, 2024 &bull; <em>Image in footer by tonmoydebnath via pngtree</em></small></p>
         </div>
       <div class="column right">
         <img src="./assets/images/pngtree_racing pigeon_6861290.png" alt="A racing pigeon" height=125px width=auto>
